@@ -1,5 +1,5 @@
 /*
- * Copyright 2008-2024 the original author or authors.
+ * Copyright 2008-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,11 +15,10 @@
  */
 package org.springframework.data.repository.query;
 
-import static java.lang.String.*;
+import static java.lang.String.format;
 
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.function.Function;
@@ -27,10 +26,14 @@ import java.util.function.Function;
 import org.springframework.core.DefaultParameterNameDiscoverer;
 import org.springframework.core.MethodParameter;
 import org.springframework.core.ParameterNameDiscoverer;
+import org.springframework.core.ResolvableType;
 import org.springframework.data.domain.Limit;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Range;
+import org.springframework.data.domain.Score;
 import org.springframework.data.domain.ScrollPosition;
 import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.Vector;
 import org.springframework.data.util.Lazy;
 import org.springframework.data.util.Streamable;
 import org.springframework.util.Assert;
@@ -44,7 +47,7 @@ import org.springframework.util.Assert;
  */
 public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter> implements Streamable<T> {
 
-	public static final List<Class<?>> TYPES = Arrays.asList(ScrollPosition.class, Pageable.class, Sort.class,
+	public static final List<Class<?>> TYPES = List.of(ScrollPosition.class, Pageable.class, Sort.class,
 			Limit.class);
 
 	private static final String PARAM_ON_SPECIAL = format("You must not use @%s on a parameter typed %s or %s",
@@ -55,6 +58,9 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 
 	private static final ParameterNameDiscoverer PARAMETER_NAME_DISCOVERER = new DefaultParameterNameDiscoverer();
 
+	private final int vectorIndex;
+	private final int scoreIndex;
+	private final int scoreRangeIndex;
 	private final int scrollPositionIndex;
 	private final int pageableIndex;
 	private final int sortIndex;
@@ -68,31 +74,14 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 	 * Creates a new {@link Parameters} instance for the given {@link Method} and {@link Function} to create a
 	 * {@link Parameter} instance from a {@link MethodParameter}.
 	 *
-	 * @param method must not be {@literal null}.
-	 * @param parameterFactory must not be {@literal null}.
-	 * @since 3.0.2
-	 * @deprecated since 3.2.1, use {@link Parameters(ParametersSource, Function)} instead.
-	 */
-	@Deprecated(since = "3.2.1", forRemoval = true)
-	protected Parameters(Method method, Function<MethodParameter, T> parameterFactory) {
-		this(ParametersSource.of(method), parameterFactory);
-	}
-
-	/**
-	 * Creates a new {@link Parameters} instance for the given {@link Method} and {@link Function} to create a
-	 * {@link Parameter} instance from a {@link MethodParameter}.
-	 *
 	 * @param parametersSource must not be {@literal null}.
 	 * @param parameterFactory must not be {@literal null}.
 	 * @since 3.2.1
 	 */
-	protected Parameters(ParametersSource parametersSource,
-			Function<MethodParameter, T> parameterFactory) {
+	protected Parameters(ParametersSource parametersSource, Function<MethodParameter, T> parameterFactory) {
 
 		Assert.notNull(parametersSource, "ParametersSource must not be null");
 		Assert.notNull(parameterFactory, "Parameter factory must not be null");
-
-		// Factory nullability not enforced yet to support falling back to the deprecated
 
 		Method method = parametersSource.getMethod();
 		int parameterCount = method.getParameterCount();
@@ -100,6 +89,9 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 		this.parameters = new ArrayList<>(parameterCount);
 		this.dynamicProjectionIndex = -1;
 
+		int vectorIndex = -1;
+		int scoreIndex = -1;
+		int scoreRangeIndex = -1;
 		int scrollPositionIndex = -1;
 		int pageableIndex = -1;
 		int sortIndex = -1;
@@ -122,6 +114,19 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 				this.dynamicProjectionIndex = parameter.getIndex();
 			}
 
+			if (Vector.class.isAssignableFrom(parameter.getType())) {
+				vectorIndex = i;
+			}
+
+			if (Score.class.isAssignableFrom(parameter.getType())) {
+				scoreIndex = i;
+			}
+
+			if (Range.class.isAssignableFrom(parameter.getType())
+					&& Score.class.isAssignableFrom(ResolvableType.forMethodParameter(methodParameter).getGeneric(0).toClass())) {
+				scoreRangeIndex = i;
+			}
+
 			if (ScrollPosition.class.isAssignableFrom(parameter.getType())) {
 				scrollPositionIndex = i;
 			}
@@ -141,6 +146,9 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 			parameters.add(parameter);
 		}
 
+		this.vectorIndex = vectorIndex;
+		this.scoreIndex = scoreIndex;
+		this.scoreRangeIndex = scoreRangeIndex;
 		this.scrollPositionIndex = scrollPositionIndex;
 		this.pageableIndex = pageableIndex;
 		this.sortIndex = sortIndex;
@@ -159,6 +167,9 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 
 		this.parameters = new ArrayList<>(originals.size());
 
+		int vectorIndexTemp = -1;
+		int scoreIndexTemp = -1;
+		int scoreRangeIndexTemp = -1;
 		int scrollPositionIndexTemp = -1;
 		int pageableIndexTemp = -1;
 		int sortIndexTemp = -1;
@@ -170,6 +181,9 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 			T original = originals.get(i);
 			this.parameters.add(original);
 
+			vectorIndexTemp = original.isVector() ? i : -1;
+			scoreIndexTemp = original.isScore() ? i : -1;
+			scoreRangeIndexTemp = original.isScoreRange() ? i : -1;
 			scrollPositionIndexTemp = original.isScrollPosition() ? i : -1;
 			pageableIndexTemp = original.isPageable() ? i : -1;
 			sortIndexTemp = original.isSort() ? i : -1;
@@ -177,6 +191,9 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 			dynamicProjectionTemp = original.isDynamicProjectionParameter() ? i : -1;
 		}
 
+		this.vectorIndex = vectorIndexTemp;
+		this.scoreIndex = scoreIndexTemp;
+		this.scoreRangeIndex = scoreRangeIndexTemp;
 		this.scrollPositionIndex = scrollPositionIndexTemp;
 		this.pageableIndex = pageableIndexTemp;
 		this.sortIndex = sortIndexTemp;
@@ -197,6 +214,67 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 		}
 
 		return createFrom(bindables);
+	}
+
+	/**
+	 * Returns whether the method the {@link Parameters} was created for contains a {@link Vector} argument.
+	 *
+	 * @return
+	 * @since 4.0
+	 */
+	public boolean hasVectorParameter() {
+		return vectorIndex != -1;
+	}
+
+	/**
+	 * Returns the index of the {@link Vector} argument.
+	 *
+	 * @return the argument index or {@literal -1} if none defined.
+	 * @since 4.0
+	 */
+	public int getVectorIndex() {
+		return vectorIndex;
+	}
+
+	/**
+	 * Returns whether the method the {@link Parameters} was created for contains a {@link Score} argument.
+	 *
+	 * @return
+	 * @since 4.0
+	 */
+	public boolean hasScoreParameter() {
+		return scoreIndex != -1;
+	}
+
+	/**
+	 * Returns the index of the {@link Score} argument.
+	 *
+	 * @return the argument index or {@literal -1} if none defined.
+	 * @since 4.0
+	 */
+	public int getScoreIndex() {
+		return scoreIndex;
+	}
+
+	/**
+	 * Returns whether the method, the {@link Parameters} was created for, contains a {@link Range} of {@link Score}
+	 * argument.
+	 *
+	 * @return
+	 * @since 4.0
+	 */
+	public boolean hasScoreRangeParameter() {
+		return scoreRangeIndex != -1;
+	}
+
+	/**
+	 * Returns the index of the argument that contains a {@link Range} of {@link Score}.
+	 *
+	 * @return the argument index or {@literal -1} if none defined.
+	 * @since 4.0
+	 */
+	public int getScoreRangeIndex() {
+		return scoreRangeIndex;
 	}
 
 	/**
@@ -382,7 +460,7 @@ public abstract class Parameters<S extends Parameters<S, T>, T extends Parameter
 	}
 
 	/**
-	 * Asserts that either all of the non special parameters ({@link Pageable}, {@link Sort}) are annotated with
+	 * Asserts that either all the non-special parameters ({@link Pageable}, {@link Sort}) are annotated with
 	 * {@link Param} or none of them is.
 	 */
 	private void assertEitherAllParamAnnotatedOrNone() {
